--- a/include/topbar.html
+++ b/include/topbar.html
@@ -1,3 +1,4 @@
+
 <div class="topbar">
     <nav class="navbar navbar-expand-sm text-dark text-center ">
         <div class="container-fluid m-3">
@@ -11,7 +12,8 @@
                       </a>
                 </div>
                 <div class="col-8 mt-2">
-                    <h5>Admin name</h5>
+                    <!--display admin name, currently login-->
+                    <h5>(admin name)</h5>
                 </div>
             </div>
         </div>
