--- a/css/pos.css
+++ b/css/pos.css
@@ -15,25 +15,33 @@ body{
     background-color: rgb(255, 255, 255);
     width:85%;
     height: 100vh;
-    margin-left: 15%;
     padding: 20px;
+    align-items: center;
+    margin: auto;
 
 }
 .buttonsss{
     align-items: center;
     justify-content: center;
-    margin-top: 150px;
-    overflow: hidden;
+    padding: 10px;
+    margin-top: 100px;
     text-overflow: hidden;
 }
 .buttonsss ul li{
-    margin: 20px;
     list-style: none;
+    margin-bottom: 20px;
 }
+
 .topbar{
     width: 100%;
     height: 60px;
     background-color: rgb(255, 255, 255);
     border: 1px solid black;
     position: relative;
+}
+.container-fluid{
+    border-radius: 10px;
+}
+img{
+    border-radius: 10px;
 }
