--- a/include/pos-topbar.html
+++ b/include/pos-topbar.html
@@ -6,7 +6,7 @@
         <div class="container-fluid col-2 ml-2">
             <div class="row">
                 <div class="col-9 mt-2">
-                    <h5>(Admin name)</h5>
+                    <h5>(Staff name)</h5>
                 </div>
                 <div class="col-3">
                     <a class="navbar-brand" href="#">
