--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -1,45 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <body>
-        <style div class="dropdown">
-        .dropbtn {
-            background-color: none;
-            color: black;
-            padding: 5px;
-            font-size: 16px;
-            border: none;
-        }
-      
-      /* The container <div> - needed to position the dropdown content */
-        .dropdown {
-            position: relative; 
-        }
-      
-      /* Dropdown Content (Hidden by Default) */
-      .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: none;
-            min-width: 160px;
-            box-shadow: none;
-            z-index: 1;
-        }
-      
-      /* Links inside the dropdown */
-      .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-      }
-
-    .dropdown-content a:hover {background-color: none;}
-
-    .dropdown:hover .dropdown-content {display: block;}
-
-    .dropdown:hover .dropbtn {background-color: #8E5431;}
-    </style>
 
 <div class="sidebar">
         <div class="buttonsss">
@@ -50,21 +8,10 @@
                 <li><a href="/kaffemariadb/staff.php">STAFF</a></li>
                 <li><a href="">SALES</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
-                <li><div class="dropdown">
-                    <button class="dropbtn">POS</button>
-                    <div class="dropdown-content">
-                        <a href="/kaffemariadb/pos-hotcoffee.php">Hot Coffee</a>
-                        <a href="/kaffemariadb/pos-icedcoffee.php">Iced Coffee</a>
-                        <a href="/kaffemariadb/pos-milktea.php">Milktea</a>
-                    </div>
-                </div></li>
+                <li><a href="/kaffemariadb/pos.php">POS</a></li>
                 <li><a href="/kaffemariadb/logout.php">LOGOUT</a></li>
-            
+
             </ul>
         </div>
 
     </div>
-
-</body>
-</head>
-</html>
