--- a/css/home.css
+++ b/css/home.css
@@ -37,3 +37,49 @@ body{
     border: 1px solid black;
     position: relative;
 }
+/*para sa popup forms*/
+
+#newbev{
+    display: none;
+    position: fixed;
+    border: 3px solid #f1f1f1;
+    background-color:rgb(255, 255, 255);
+    width: 400px;
+    top:20%;
+    margin:auto;
+    left:40%;
+    transition: 4s;
+  }
+  #newbev h1{
+      color:brown;
+  }
+  .open-button {
+    color: brown;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    bottom: 23px;
+    right: 28px;
+    width: 280px;
+  }
+  .pop-upform{
+      padding-left:20px;
+  }
+  
+  #overlay {
+    width: 100vw;
+  top:0;
+  left:0;
+    height: 100vh;
+    position: relative;
+    z-index: 1002;
+    background: rgba(0, 0, 0, .6);
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+  }
+
