--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -9,6 +9,7 @@
                 <li><a href="">SALES</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
                 <li><a href="/kaffemariadb/pos.php">POS</a></li>
+                <li><a href="manageaccounts.php">MANAGE ACCOUNTS</a></li>
                 <li><a href="/kaffemariadb/logout.php">LOGOUT</a></li>
 
             </ul>
