updated sales report

--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -6,7 +6,7 @@
                 <li><a href="/kaffemariadb/bev.php">BEVERAGE</a></li>
                 <li><a href="/kaffemariadb/inventory.php">INVENTORY</a></li>
                 <li><a href="/kaffemariadb/staff.php">STAFF</a></li>
-                <li><a href="">SALES</a></li>
+                <li><a href="/kaffemariadb/sales.php">SALES</a></li>
                 <li><a href="/kaffemariadb/supplier.php">SUPPLIER</a></li>
                 <li><a href="/kaffemariadb/pos.php">POS</a></li>
                 <li><a href="manageaccounts.php">MANAGE ACCOUNTS</a></li>
