--- a/css/home.css
+++ b/css/home.css
@@ -4,27 +4,38 @@
 }
 body{
     overflow: hidden;
+    background-color: #F3E3D3;
 }
+
+
 .sidebar{
-    border: 1px solid black;
-    width:15%;
+    border: none;
     height: 100vh;
     position: fixed;
+    font-family: 'Georama';
+    font-weight: 700px;
+    background-color: #E0CDBE;
 }
+
+.sidebar:hover{
+    color:#F3E3D3;
+}
+
 .bigside{
-    background-color: rgb(255, 255, 255);
-    width:85%;
+    background-color: #F3E3D3;
+    width:84%;
     height: 100vh;
-    margin-left: 15%;
+    margin-left: 16%;
     padding: 20px;
 
 }
 .buttonsss{
     align-items: center;
     justify-content: center;
-    margin-top: 150px;
+    margin-top: 80px;
     overflow: hidden;
     text-overflow: hidden;
+    font-family: 'Georama', sans-serif;
 }
 .buttonsss ul li{
     margin: 20px;
@@ -33,9 +44,27 @@ body{
 .topbar{
     width: 100%;
     height: 60px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid black;
+    border:2px solid white;
+    background-color: #F3E3D3;
     position: relative;
+    font-family: 'Georama';
+    font-size: 25px;sans-serif;
+    font-weight:bold;
+    color: #834a11;
+    margin-left: -20px;
+    margin-top: -15px; 
+    line-height:45px;
+
+}
+
+.homebutton{
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    text-decoration: none;
+    font-family: 'Georama';
+    font-size:17px;
+    font-weight:bold;
+    color: #8E5431; 
 }
 /*para sa popup forms*/
 
