pwede na ba mamatai?
shahsahshahshhasha

--- a/include/sidebar.html
+++ b/include/sidebar.html
@@ -3,7 +3,12 @@
   <div class="buttonsss">
       <ul>
            <li><a href="/kaffemariadb/home.php"><ion-icon name="home-sharp"></ion-icon>&nbsp;HOME</a></li>
-          <li><a href="/kaffemariadb/bev.php"><ion-icon name="cafe-sharp"></ion-icon>&nbsp;BEVERAGE</a></li>
+           <div class="dropdown">
+            <li><a href="/kaffemariadb/bev.php"><ion-icon name="cafe-sharp"></ion-icon>&nbsp;BEVERAGE</a></li>
+            <div class="dropdown-content">
+                <a href="/kaffemariadb/bev-stock.php">Stock</a>
+            </div>
+           </div>
           <div class="dropdown">
               <li><a class="dropbtn" href="#"><ion-icon name="file-tray-stacked-sharp"></ion-icon>&nbsp;INVENTORY</a></li>
               <div class="dropdown-content">
