pos sidebar design

--- a/include/pos-sidebar.html
+++ b/include/pos-sidebar.html
@@ -2,11 +2,62 @@
 <div class="sidebar">
     <div class="buttonsss">
         <ul>
-             <li><a href="/kaffemariadb/pos.php">POS Home</a></li>
-             <li><a href="/kaffemariadb/pos-hotcoffee.php">Hot Coffee</a></li>
-             <li><a href="/kaffemariadb/pos-icedcoffee.php">Iced Coffee</a></li>
-             <li><a href="/kaffemariadb/pos-milktea.php">Milk Tea</a></li>
-            <li><a href="/kaffemariadb/logout.php">LOGOUT</a></li>
+             <li><a href="/kaffemariadb/pos-user.php"><ion-icon name="home"></ion-icon>&nbsp;POS Home</a></li>
+             <li><a href="/kaffemariadb/pos-hotcoffee.php"><ion-icon name="cafe"></ion-icon>&nbsp;Hot Coffee</a></li>
+             <li><a href="/kaffemariadb/pos-icedcoffee.php"><ion-icon name="cafe"></ion-icon>&nbsp;Iced Coffee</a></li>
+             <li><a href="/kaffemariadb/pos-milktea.php"><ion-icon name="cafe"></ion-icon>&nbsp;Milk Tea</a></li>
+            <li><a href="/kaffemariadb/logout.php"><ion-icon name="log-out-sharp"></ion-icon>&nbsp;LOGOUT</a></li>
         </ul>
     </div>
 </div>
+
+<body>
+    <style type="text/css">
+        *
+        
+        {
+            margin:0;
+            padding:0;
+            box-sizing: border-box;
+            
+            
+        }
+
+        .buttonsss ul li a{
+            color: 	#8E5431; 
+            font-size: 17px;
+            font-family: 'Georama';
+            font-weight: bold;
+            font-style: normal;
+            top: -60px;
+            margin-left: -5px;
+            cursor: pointer;
+            position:relative;
+            width: 220px;
+            height: 40px;
+            text-decoration:none;
+            transition: 0.4s;
+            border-radius: 30px 0px 30px 0px; 
+            display:flex;
+            padding-top: 11px;
+            padding-left:18px;
+            line-height: 20px;
+            letter-spacing: 1px;
+        }
+        
+        .buttonsss ul li:hover a{
+            color:#F3E3D3;
+            background: #8E5431;
+            
+        }
+        
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Georama&family=Ubuntu&display=swap" rel="stylesheet">
+    </style>
+        
+</style>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>   
