--- a/css/pos.css
+++ b/css/pos.css
@@ -6,22 +6,30 @@ body{
     overflow: hidden;
 }
 .sidebar{
-    border: 1px solid black;
-    width:15%;
+    border: none;
     height: 100vh;
+    width: 230px;
     position: fixed;
+    font-family: 'Georama';
+    font-weight: 700px;
+    background-color: #E0CDBE;
 }
+
+.sidebar:hover{
+    color:#F3E3D3;
+}
+
 .bigside1{
-    background-color: rgb(255, 255, 255);
-    width:85%;
+    background-color: #F3E3D3;
+    width:100%;
     height: 100vh;
-    padding: 20px;
+    padding: 50px;
     align-items: center;
     margin: auto;
 
 }
 .bigside{
-    background-color: rgb(231, 216, 216);
+    background-color: #F3E3D3;
     width:85%;
     height: 100vh;
     align-items: center;
@@ -42,7 +50,7 @@ body{
 .topbar{
     width: 100%;
     height: 60px;
-    background-color: rgb(255, 255, 255);
+    background-color: #F3E3D3;
     border: 1px solid black;
     position: relative;
 }
@@ -56,3 +64,11 @@ img{
     border-radius: 10px;
     height: 100%;
 }
+
+.btn-group-sm>.btn, .btn-sm {
+    padding: .25rem .5rem;
+    font-size: .875rem;
+    line-height: 1.5;
+    border-radius: .2rem;
+}
+
