--- a/include/pos-sidebar-user.html
+++ b/include/pos-sidebar-user.html
@@ -2,7 +2,7 @@
 <div class="sidebar">
     <div class="buttonsss">
         <ul>
-             <li><a href="/kaffemariadb/pos-user.php"><ion-icon name="home"></ion-icon>&nbsp;POS Home</a></li>
+             <li><a href="/kaffemariadb/pos.php"><ion-icon name="home"></ion-icon>&nbsp;POS Home</a></li>
              <li><a href="/kaffemariadb/pos-hotcoffee.php"><ion-icon name="cafe"></ion-icon>&nbsp;Hot Coffee</a></li>
              <li><a href="/kaffemariadb/pos-icedcoffee.php"><ion-icon name="cafe"></ion-icon>&nbsp;Iced Coffee</a></li>
              <li><a href="/kaffemariadb/pos-milktea.php"><ion-icon name="cafe"></ion-icon>&nbsp;Milk Tea</a></li>
