--- a/css/home.css
+++ b/css/home.css
@@ -27,7 +27,7 @@ body{
     height: 100vh;
     margin-left: 16%;
     padding: 20px;
-
+    overflow-y: scroll;
 }
 .buttonsss{
     align-items: center;
